--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
               }
             ],
             "styles": [
-              "src/global.scss"
+              "src/styles.scss"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
@@ -99,7 +99,7 @@
               }
             ],
             "styles": [
-              "src/global.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           }
